Updated App name To BookHeart

--- a/BookLoggerApp/Components/Pages/BookDetail.razor
+++ b/BookLoggerApp/Components/Pages/BookDetail.razor
@@ -9,7 +9,7 @@
 @inject IWishlistService WishlistService
 @inject Microsoft.AspNetCore.Components.NavigationManager Navigation
 
-<PageTitle>@(ViewModel.Book?.Title ?? "Book Details") - LoveLit</PageTitle>
+<PageTitle>@(ViewModel.Book?.Title ?? "Book Details") - BookHeart</PageTitle>
 
 <div class="book-detail-container">
     @if (ViewModel.IsBusy)
