--- a/BookLoggerApp/Components/Pages/BookEdit.razor
+++ b/BookLoggerApp/Components/Pages/BookEdit.razor
@@ -12,7 +12,7 @@
 @inject BookLoggerApp.Core.Services.Abstractions.IStatsService StatsService
 @inject BookLoggerApp.Services.IScannerService ScannerService
 
-<PageTitle>@(ViewModel.Book?.Id == Guid.Empty ? "Add Book" : "Edit Book") - LoveLit</PageTitle>
+<PageTitle>@(ViewModel.Book?.Id == Guid.Empty ? "Add Book" : "Edit Book") - BookHeart</PageTitle>
 
 <div class="book-edit-container">
     <div class="book-edit-header">
