--- a/BookLoggerApp/Components/Pages/Bookshelf.razor
+++ b/BookLoggerApp/Components/Pages/Bookshelf.razor
@@ -13,7 +13,7 @@
 @inject BookLoggerApp.Services.IScannerService ScannerService
 @implements IDisposable
 
-<PageTitle>Bookshelf - LoveLit</PageTitle>
+<PageTitle>Bookshelf - BookHeart</PageTitle>
 
 <div class="bookshelf-container">
     <!-- Reading Goal Header -->
