--- a/BookLoggerApp/Components/Pages/PlantShop.razor
+++ b/BookLoggerApp/Components/Pages/PlantShop.razor
@@ -7,7 +7,7 @@
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 @implements IDisposable
 
-<PageTitle>Plant Shop - LoveLit</PageTitle>
+<PageTitle>Plant Shop - BookHeart</PageTitle>
 
 <div class="plant-shop-container">
     <!-- Header -->
