--- a/BookLoggerApp/Components/Pages/Stats.razor
+++ b/BookLoggerApp/Components/Pages/Stats.razor
@@ -7,7 +7,7 @@
 @inject BookLoggerApp.Core.Services.Abstractions.IBackButtonService BackButtonService
 @implements IDisposable
 
-<PageTitle>Level Overview - LoveLit</PageTitle>
+<PageTitle>Level Overview - BookHeart</PageTitle>
 
 <link rel="stylesheet" href="css/stats.css" />
 
