--- a/BookLoggerApp/Components/Pages/Bookshelf.razor
+++ b/BookLoggerApp/Components/Pages/Bookshelf.razor
@@ -366,7 +366,7 @@
     <div class="modal-overlay" @onclick="CloseDeleteShelfModal">
         <div class="modal-content" @onclick:stopPropagation="true">
             <h3>Delete Shelf</h3>
-            <p>Are you sure you want to delete this shelf? Books will remain in your library.</p>
+            <p>Are you sure you want to delete this shelf? All items will be moved to the Main Shelf.</p>
             <div class="modal-actions">
                 <button class="btn btn-secondary" @onclick="CloseDeleteShelfModal">Cancel</button>
                 <button class="btn btn-danger" @onclick="ConfirmDeleteShelf">Delete</button>
